spec/clim/compile_time_error_spec/files/invalid_type/help_short.cr
require "./../../../../../src/clim"

class MyCli < Clim
  main do
    help short: true
    run do |opts, args|
    end
  end
end

MyCli.start(ARGV)
